[package]
name = "entwistle"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.3.0"
chumsky = "0.9.2"
indenter = "0.3"
once_cell = "1"
parking_lot = "0.12.1"
regex-automata = "0.3.3"
regex-syntax = "0.7.2"
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
