[package]
name = "entwistle"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.4.1"
chumsky = "0.9.3"
color-eyre = "0.6.2"
indenter = "0.3"
itertools = "0.13.0"
once_cell = "1"
parking_lot = "0.12.1"
regex-automata = "0.4.5"
regex-syntax = "0.8.2"
salsa = "0.25.2"
scopeguard = "1.2.0"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
